infra/k8s/overlays/tenant-shared-template/patches/storefront-hostaliases.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: storefront
spec:
  template:
    spec:
      hostAliases: null
